...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/searchProjectText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Search" />

...
            android:layout_below="@+id/searchProjectText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAddProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
...
