...
    <string name="rcncLabel">Reedy Creek</string>
    <string name="are_you_sure">Are you sure?</string>
    <!-- Project Activity -->

    <!-- Observation Activity -->
    <string name="observation_title">Observation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_observation">Nothing to display. Observation may have been deleted.</string>
    <!-- Observation Activity -->

    <!-- Main Activity -->
    <string name="no_network">No network connection.</string>
...
    <string name="done">Completed</string>
    <!-- Design Ideas Fragment -->

    <!-- Communities Fragment -->
    <!-- Layout -->
    <string name="communities_title">Communities</string>
    <string name="load_more">Load More</string>
    <string name="no_more_users">No more users to load.</string>
    <!-- Communities Fragment -->

    <!-- General -->
    <!-- Layout -->
    <string name="no_description">No Description</string>
...
