...
        android:layout_marginTop="12dp"
        android:text="Recent Ideas"
        android:textSize="20sp"
        android:textColor="@color/colorButton"
        android:textStyle="bold"
        android:layout_below="@+id/ideasSearchBar"
        android:layout_alignLeft="@+id/design_ideas_lv"
        android:layout_alignStart="@+id/design_ideas_lv" />

    <ListView
        android:id="@+id/design_ideas_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
        android:layout_marginEnd="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/design_ideas_recent_cont_title" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddIdea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
...
