...
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/design_ideas_info_text" />


    <EditText
        android:id="@+id/design_idea_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="15dp"
...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ideaTypeLabel"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/design_idea_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
...
