...
            android:layout_height="wrap_content"
            android:src="@drawable/discussing" />

    </LinearLayout>

    <TextView
        android:id="@+id/design_ideas_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
...
